--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "name": "crypto_wallet",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "@rails/webpacker": "5.4.4",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
+    "notify-js-legacy": "^0.4.1",
+    "popper.js": "^1.16.1",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
+  },
+  "devDependencies": {
+    "webpack-dev-server": "^3"
+  }
 }
