--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "5.4.4",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "4.1.3",
     "jquery": "^3.7.1",
     "notify-js-legacy": "^0.4.1",
     "popper.js": "^1.16.1",
