--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "crypto_wallet",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@rails/webpacker": "5.4.4",
-    "bootstrap": "4.1.3",
+    "add": "^2.0.6",
+    "bootstrap": "^4.1.3",
     "jquery": "^3.7.1",
     "notify-js-legacy": "^0.4.1",
     "popper.js": "^1.16.1",
     "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack-cli": "^3.3.12",
+    "yarn": "^1.22.21"
   },
   "devDependencies": {
     "webpack-dev-server": "^3"
